<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/layout_main_temp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_radio"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@color/white"
        android:elevation="@dimen/elevation_height">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_gray"/>

        <RadioGroup
            android:id="@+id/rg_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_message"
                style="@style/MainRadioTheme"
                android:text="@string/tab_message"
                android:drawableTop="@drawable/icon_message"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rb_contact"
                style="@style/MainRadioTheme"
                android:text="@string/tab_contact"
                android:drawableTop="@drawable/icon_contact"/>

            <RadioButton
                android:id="@+id/rb_school"
                style="@style/MainRadioTheme"
                android:text="@string/tab_dynamic"
                android:drawableTop="@drawable/icon_dynamic"/>

            <RadioButton
                android:id="@+id/rb_activity"
                style="@style/MainRadioTheme"
                android:text="@string/tab_activity"
                android:drawableTop="@drawable/icon_activity"/>
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>
