<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_my_dynamic"
            android:title="我的动态"
            android:icon="@mipmap/ic_camera_white_48dp"
            android:orderInCategory="1"
            app:showAsAction="always"/>

        <item
            android:id="@+id/menu_my_activity"
            android:title="我的活动"
            android:icon="@mipmap/ic_group_work_white_48dp"
            android:orderInCategory="1"
            app:showAsAction="always"/>

        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            android:icon="@mipmap/ic_settings_white_48dp"
            android:orderInCategory="1"
            app:showAsAction="always"/>

        <item
            android:id="@+id/menu_about"
            android:title="@string/menu_about"
            android:icon="@mipmap/ic_info_white_48dp"
            android:orderInCategory="1"
            app:showAsAction="always"/>

        <item
            android:id="@+id/menu_exit"
            android:title="@string/menu_exit"
            android:icon="@mipmap/ic_reply_white_48dp"
            android:orderInCategory="1"
            app:showAsAction="always"/>
    </group>
</menu>